[user] Provide User List and Unfollowing
